--- a/README.Rmd
+++ b/README.Rmd
@@ -36,9 +36,13 @@ devtools::install_github("PietrH/vlindersRarefaction")
 
 This is a basic example which shows you how to solve a common problem:
 
-```{r example}
+```{r example, eval=FALSE, include=FALSE}
 library(vlindersRarefaction)
-## basic example code
+## load some input data
+warande <- readr::read_delim("../tblWarandepark.csv", delim = ";")
+## convert to formats iNEXT is expecting
+convert_to_incidence_freq(warande)
+convert_to_abundance(warande)
 ```
 
 What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
