--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,7 @@ knitr::opts_chunk$set(
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![R-CMD-check](https://github.com/PietrH/vlindersRarefaction/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/PietrH/vlindersRarefaction/actions/workflows/R-CMD-check.yaml)
 [![test-coverage](https://github.com/PietrH/vlindersRarefaction/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/PietrH/vlindersRarefaction/actions/workflows/test-coverage.yaml)
+[![Codecov test coverage](https://codecov.io/gh/PietrH/vlindersRarefaction/branch/main/graph/badge.svg)](https://app.codecov.io/gh/PietrH/vlindersRarefaction?branch=main)
 <!-- badges: end -->
 
 
