set title back to original title, use H1 for title

--- a/vignettes/plotting-warande.Rmd
+++ b/vignettes/plotting-warande.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "Creating some rarefaction curves for butteryfly data"
+title: "plotting-warande"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{plotting-warande}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-
+# Creating some rarefaction curves for butteryfly data
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
